--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
   overflow-x: hidden;
 
-  background: url("background-main.webp");
+  background: url("background-main-min.webp");
 
 }
 
@@ -520,7 +520,7 @@ header nav a:hover::after {
 
 .home-p-intro-anim > div > div::after {
 
-  background-image: url("noise.webp");
+  background-image: url("noise-min.webp");
 
   content: "";
 
